# sprint2-3dextrusion

./: .replit  README.md  __init__.py  agent_definitions.py  auth.py  build_package.py  clear_projects.py  clear_users.py  config.py  constants.py  database.py  engineroom.db  engineroom.db-shm  engineroom.db-wal  engineroom.db.corrupted.1754138332  main.py  prompts.py  pyproject.toml  recover_database.py  replit.nix  security_report.txt  security_scan_results.json  security_scanner.py  tools.py
attached_assets/: Pasted--2025-07-31T09-17-38-573Z-172-31-104-194-31-Jul-2025-09-17-38-POST-api-log-error-HTTP-1-1-1753953526709_1753953526709.txt  Pasted--2025-08-07-10-51-41-379-engineroom-INFO-logger-Council-requirements-loaded-front-setback-1754563962893_1754563962893.txt  Pasted--Remove-markdown-formatting-and-special-characters-from-response-import-re--1754267740204_1754267740205.txt  Pasted--Site-Inspector-Base-root-header-h-60px-progress-h-56-1754804784200_1754804784201.txt  Pasted--from-flask-import-Blueprint-request-jsonify-session-from-typing-import-Tuple-Dict-Any-from-uti-1754258679435_1754258679436.txt  Pasted-172-31-100-194-26-Jul-2025-12-33-59-GET-static-js-snapshot-manager-js-HTTP-1-1-304-172-31-1753533367496_1753533367496.txt  Pasted-2025-07-25-12-03-02-757-engineroom-INFO-logger-Progress-Step-6-Downloading-28-55-5950843-1753445300365_1753445300365.txt  Pasted-2025-08-03-11-22-14-925-engineroom-ERROR-logger-Database-operation-failed-unrecognized-toke-1754220158870_1754220158871.txt  Pasted-2025-08-03-11-26-49-686-engineroom-INFO-logger-Snapshot-result-id-42-project-id-9--1754220446866_1754220446867.txt  (+3 more)
core/: __init__.py  app_factory.py  (+2 more)
(+127 files in other folders)
